k3s/ingress-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-nginx-ingress
  namespace: default
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: nginx03.k3s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx03
                port:
                  number: 80
    - host: longhorn.k3s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
